@@ -5,6 +5,7 @@ import java.awt.image.BufferedImage;
 
 import edu.colorado.phet.common.phetcommon.resources.PhetResources;
 
+//REVIEW IDEA identifies unused constants here
 /**
  * Resources (images and translated strings) for "Fractions" are loaded eagerly to make sure everything exists on sim startup, see #2967.
  * Automatically generated by edu.colorado.phet.buildtools.preprocessor.ResourceGenerator
